package com.awbd.financetracker.entity;

import com.fasterxml.jackson.annotation.JsonIgnore;
import jakarta.persistence.*;
import jakarta.validation.constraints.DecimalMin;
import jakarta.validation.constraints.NotNull;
import java.math.BigDecimal;

@Entity
@Table(name = "budgets")
public class Budget {

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    @NotNull(message = "Maximum limit is required")
    @DecimalMin(value = "0.0", inclusive = false, message = "Maximum limit must be greater than 0")
    @Column(nullable = false)
    private BigDecimal maxLimit;

    @DecimalMin(value = "0.0", message = "Current spending cannot be negative")
    @Column(nullable = false)
    private BigDecimal currentSpending;

    @JsonIgnore
    @OneToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "category_id", nullable = false, unique = true)
    private Category category;

    public Budget() {
    }

    public Budget(BigDecimal maxLimit, BigDecimal currentSpending, Category category) {
        this.maxLimit = maxLimit;
        this.currentSpending = currentSpending;
        this.category = category;
    }

    public Long getId() {
        return id;
    }

    public void setId(Long id) {
        this.id = id;
    }

    public BigDecimal getMaxLimit() {
        return maxLimit;
    }

    public void setMaxLimit(BigDecimal maxLimit) {
        this.maxLimit = maxLimit;
    }

    public BigDecimal getCurrentSpending() {
        return currentSpending;
    }

    public void setCurrentSpending(BigDecimal currentSpending) {
        this.currentSpending = currentSpending;
    }

    public Category getCategory() {
        return category;
    }

    public void setCategory(Category category) {
        this.category = category;
    }

    // Helper method to get user through category
    @JsonIgnore
    public User getUser() {
        return category != null ? category.getUser() : null;
    }

    public boolean isExceeded() {
        return currentSpending.compareTo(maxLimit) > 0;
    }

    public BigDecimal getRemainingBudget() {
        return maxLimit.subtract(currentSpending);
    }
}

